--- a/src/Css/style.css
+++ b/src/Css/style.css
@@ -186,13 +186,13 @@ body {
 @media screen and (min-width: 1000px) {
     .container {
         display: flex;
-        width: 70%;
-        height: 40%;
+        width: 75%;
+        height: 300px;
     }
 
     .image {
         height: 100%;
-        width: 40%;
+        width: 45%;
         border-top-right-radius: 0;
         border-bottom-left-radius: 1em;
     }
@@ -204,16 +204,19 @@ body {
 
     .main {
         height: 100%;
-        width: 60%;
+        width: 55%;
     }
 
     .text {
-        margin: 0 1em;
+        margin: .5em;
         height: 70%;
     }
 
     .text h1 {
-        font-size: 18px;
+        font-size: 20px;
+    }
+    .text p{
+        padding: 0 3em;
     }
 
     .infos {
@@ -231,8 +234,8 @@ body {
         width: 20em;
         height: 4em;
         border-radius: 1em;
-        top: 46%;
-        left: 63.5%;
+        top: 49%;
+        left: 69.5%;
     }
 
     .share ul li {
